# weightnoise

./: .gitignore  LICENSE  README.md  delete_model.yml  pyproject.toml
.github/workflows/: compact_push.py  compact_test.py  compact_test.yml  experiment.yml  pypi.yml  svd_true.yml  sweep_compact.py  sweep_compact.yml  test_compact.py  test_compact.yml  theseus-experiment.yml  theseus_experiment.py  wit-compress.yml  wit-eval.sh  wit-eval.yml  wit_compress_script.py
weightnoise/: __init__.py  __main__.py  compress.py  inspect.py  planner.py  prune.py  stitch.py  stream.py  visualize.py
weightnoise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
